# jsl

./: .gitignore  CMakeLists.txt  Makefile  README.md  allocators.h  arena.h  assert.h  base.c  base.h  base_short.h  bit_fiddling.h  chained_arena.h  da.c  js_readfile.c  jsl_core.h  lib.h  macros.h  main.c  makefile  malloc_checked.h  mathy_macros.h  meta_macros.h  nob.c  nob.old  stretchy_buffer.h  test.c  test.h  test_arena.c  test_arena_auto_init.c  test_da.c  test_da_arena.c  test_dll.c  test_file.txt  test_hash_unhash.c  test_machine_eps.c  test_ppm.c  test_ppm.ppm  test_queue.c  test_sb_fibonacci.c  test_sb_push_len_index_free.c  (+7 more)
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  test_get  test_hash_unhash  test_trivial
debug/Testing/Temporary/: CTestCostData.txt
ds/: CMakeLists.txt  CMakePresets.json  ds.h
ds/src/: ds.c  ds.h
num/: CMakeLists.txt  mat.c  nd.c  nr.c  num.c  num.h  test_bisection.c  test_fixpoint.c  test_integration.c  test_isclose.c  test_matrix.c  test_newton.c  test_secant.c  test_secant_bisect.c  test_write_values.c
src/: CMakeLists.txt  base.c  base.cpp  base.h  base.hpp  test_get.c  test_hash_unhash.c  test_hash_unhash.cpp  test_sb_fibonacci.c  test_sb_push_len_index_free.c  test_trivial.cpp
